			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

16-Jul-2005
~~~~~~~~~~~
Detect GCC 4 and disable pointer signedness warnings (Thomas Leonard).
Mark files as executable if their MIME type is a subclass of
application/x-executable (Thomas Leonard).

15-Jul-2005
~~~~~~~~~~~
Copied xdgmime library into the filer, so we don't need gnomevfs just
to do MIME guessing from file contents (Guido Schimmels).

26-Jun-2005
~~~~~~~~~~~
Renamed the 'ROX Session' section in options to 'Desktop' as it could be
used by any session manager (Stephen Watson).

25-Jun-2005
~~~~~~~~~~~
Panel side is now stored with the panel file, and is reused on start-up if
you use --border in place of the old --top, --bottom, --left and --right
(which still work). The panel menu has a new 'Panel Options...' choice to let
you change which edge to use (Thomas Leonard).

11-Jun-2005
~~~~~~~~~~~
Updated Chinese translation (Babyfai Cheung).

09-Jun-2005
~~~~~~~~~~~
Removed AC_PATH_X, which stopped configure working on Mac OS X (Thomas Leonard;
reported by Tristan McLeay). We already had AC_PATH_XTRA anyway.

07-Jun-2005
~~~~~~~~~~~
Add Basque transation (Piarres Beobide).

Entering ~ as the first character in the Goto: entry goes to the users
home directory (Stephen Watson, suggested by james).
Install script now installs MIME run actions into $XDG_CONFIG_HOME 
(Stephen Watson).

20-May-2005
~~~~~~~~~~~
Change the way that ROX-Session runs ROX-Filer.  It now uses the -S option to
open the default Panel and Pinboard, with the configuration of panel and 
pinboard in ROX-Filer options (Stephen Watson).
Fixed error in tooltip in bulk rename box (Vincent Lefèvre).

13-May-2005
~~~~~~~~~~~
Type changes for 64-bit compatibility (Tony Houghton).

Tests whether dnotify_wakeup_flag is set instead of dnotify_wakeup which is a
function address (Tony Houghton).

08-May-2005
~~~~~~~~~~~
Selecting an entry from the bookmarks menu can open a new window, depending