@@ -236,12 +236,6 @@
     </radio-group>
 
     <frame label='Panel'>
-      <radio-group name='session_panel_position'>
-        <radio label='Top panel' value='0'>The panel is shown at the top of the screen</radio>
-        <radio label='Bottom panel' value='1'>The panel is shown at the bottom of the screen</radio>
-        <radio label='Left panel' value='2'>The panel is shown at the left hand side of the screen</radio>
-        <radio label='Right panel' value='3'>The panel is shown at the right hand side of the screen</radio>
-      </radio-group>
       <entry name='session_panel_name'>Enter the name of the panel to show here.</entry>
     </frame>
 
