@@ -7,6 +7,8 @@
 Detect GCC 4 and disable pointer signedness warnings (Thomas Leonard).
 Mark files as executable if their MIME type is a subclass of
 application/x-executable (Thomas Leonard).
+Removed the option for choosing panel side for -S, since we can use the new
+method of choosing the panel side indead (Thomas Leonard).
 
 15-Jul-2005
 ~~~~~~~~~~~
